// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshot for default state > password-field-default 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshot for disabled state > password-field-disabled 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input Mui-disabled MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        disabled=""
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshot for error state > password-field-error 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeCool ri-error-warning-fill css-cb75nt-MuiIcon-root"
        />
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Password is required
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshot for visible state > password-field-visible 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshot with all props > password-field-all-props 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="password"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-13jgzxd-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      required=""
      variant="outlined"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        placeholder="Password"
        required=""
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-1pd97o3-MuiFormHelperText-root"
      color="primary"
      helpertext=""
    >
      <div
        class="MuiBox-root css-y6f5bb"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter your password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshot with custom toggle nodes > password-field-custom-toggle 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-disableElevation css-doxyf4-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            Show
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshots for key component states > password-field-default 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshots for key component states > password-field-disabled 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input Mui-disabled MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        disabled=""
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshots for key component states > password-field-error 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeCool ri-error-warning-fill css-cb75nt-MuiIcon-root"
        />
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Password is required
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Snapshot Testing > should match snapshots for key component states > password-field-visible 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should maintain accessibility across all themes > password-a11y-dark 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="dark"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="a11y-password-dark"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Accessible Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-13jgzxd-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      required=""
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="a11y-password-dark"
        name="a11y-password-dark"
        required=""
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter a secure password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should maintain accessibility across all themes > password-a11y-highContrast 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="highContrast"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="a11y-password-highContrast"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Accessible Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-13jgzxd-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      required=""
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="a11y-password-highContrast"
        name="a11y-password-highContrast"
        required=""
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter a secure password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should maintain accessibility across all themes > password-a11y-light 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="a11y-password-light"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Accessible Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
      <span
        aria-hidden="true"
        class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-13jgzxd-MuiFormLabel-asterisk"
      >
         
        *
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      required=""
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="a11y-password-light"
        name="a11y-password-light"
        required=""
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter a secure password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should render correctly across all color schemes with proper theme colors > password-field-dark-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="dark"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="theme-password-dark"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Theme Test Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="theme-password-dark"
        name="theme-password-dark"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should render correctly across all color schemes with proper theme colors > password-field-highContrast-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="highContrast"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="theme-password-highContrast"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Theme Test Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="theme-password-highContrast"
        name="theme-password-highContrast"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should render correctly across all color schemes with proper theme colors > password-field-light-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="theme-password-light"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Theme Test Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="theme-password-light"
        name="theme-password-light"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should render correctly across all themes > ds-password-field-dark-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="dark"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="password"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Theme Test Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      data-testid="password-field-dark"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter your password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should render correctly across all themes > ds-password-field-highContrast-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="highContrast"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="password"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Theme Test Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      data-testid="password-field-highContrast"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter your password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DsTextFieldPassword > Theme Testing > should render correctly across all themes > ds-password-field-light-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-1kfdajl-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="password"
    >
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium css-hhsa5x-MuiTypography-root"
      >
        Theme Test Password
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularSmall css-1gw6gyp-MuiTypography-root"
      />
    </label>
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd css-1xsnow0-MuiInputBase-root"
      data-testid="password-field-light"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="MuiInputBase-input MuiInputBase-inputAdornedEnd css-1rw3c3-MuiInputBase-input"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-rx3vxy-MuiInputAdornment-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorSecondary MuiButton-disableElevation css-1rxzqep-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            SHOW
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1pd97o3-MuiFormHelperText-root"
      helpertext=""
    >
      <div
        class="MuiBox-root css-s14tpm"
      >
        <span
          class="MuiTypography-root MuiTypography-bodyRegularSmall css-10vdoor-MuiTypography-root"
        >
          Enter your password
          ​
        </span>
      </div>
    </div>
  </div>
</div>
`;
